antismash/outputs/html/css/style.less
/* ... */
.structure img {
    display: inline-block;
    width:80%;
    height: auto;
}

.modal-container {
    display: none;
    position: absolute;
    z-index: 2; /* keep on top of any open help tooltips */
    padding-top: 5%;
    padding-left: 10%;
    padding-bottom: 100%;
    left: 0;
    top: 0;
    width: 90%;
    height: 100%;
    background-color: rgba(0,0,0,0.4);

    .modal-content {
        position: relative;
    }

    .smiles-canvas-modal {
        background-color: #fefefe;
        margin: auto;
        padding: 20px;
        border: 1px solid #888;
        height: 80%;
        width: 80%;
    }
}

.structure-link {
    display: inline-block;
    text-align: center;
    width:100%;
}

.as-structure-warning {
    font-size: 90%;
}

.prediction-text {
    font-size: 75%;
    .left-padding;
}

.content {
    display: block;
}


.region-type {
    margin: 0 0 0 0.5em;
    padding: 0;
}

.region-svg-container {
    margin: 0 2% 0 2%;
}

#regionbuttons {
    margin: 0 0 0 0.5em;
    padding: 0;
    list-style-type: none;
    min-height: 1.1em;
    max-height: 2em;
    a {
        background: none;
    }
    a:hover {
        text-decoration: none;
    }

    li {
        float: left;
        margin: 0;
        margin-right: 0.2em;
        border-radius: 50%;
        padding: 0.25em;
        min-width: 1.5em;
        text-align: center;
        vertical-align: middle;
    }
    li.active {
        padding: 0.14em;
    }
}

.dha {
    font-weight: bold;
    color: mediumseagreen;
}

.dhb {
    font-weight: bold;
    color: mediumorchid;
}

.cys {
    font-weight: bold;
    color: royalblue;
}

.macrolactam {
    font-weight: bold;
    color: red;
}

.cut {
    font-weight: bold;
    color: grey;
}

.separator-text {
    font-size: 80%;
    padding-top: 1em;
}

.description-text, .cluster-rules-header {
    font-size: 85%;
}

.alt-weight-desc {
    .description-text;
}

.alt-weight-n {
    .alt-weight-desc;
    padding-left: 2.5em;
}

.region-download {
    font-size: 75%;
    float: right;
    padding: 5px;
    margin-right: 20px;
    border-radius: 5px;
    background-color: #eee;
}

.cluster-rules {
    font-size: 75%;
    display: none;
    border: 1px solid @tooltip-border;
    background-color: @tooltip-background;
}

.description-container {
    .left-padding;
}

.contig-edge-warning {
    font-size: 75%;
    font-weight: bold;
    float: right;
    color: black;
    background-color: orange;
    padding: 5px;
    margin-right: 20px;
    border-radius: 5px;
}

table {
    border-collapse: collapse;
}
#region-overview {
    padding: 0;
    .left-padding;
    th {
        margin: 0.2em 0.5em;
        padding: 0 0.5em;
    }


    .separator-row {
        background-color: #ddd;
        td {
            padding-top: 1em;
        }
    }
    .even {
        background-color: #f1f1f1;
    }

    td {
        margin: 0.2em 0.5em;
        padding: 0.2em 0.5em;
    }

    .digits {
        text-align: right;
    }
}

.tooltip {
    border: 2px solid @tooltip-border;
    background-color: @tooltip-background;
    display: none;
    position: absolute;
    font-size: 80%;
    padding: 0.5em;
    color: @antismash-main;
}

.similarity-text {
    color: @antismash-gray;
}

.svgene-type-other {
    fill: @gene-type-other;
    stroke: black;
}
.svgene-type-biosynthetic {
    fill: @gene-type-biosynthetic;
    stroke: black;
}
.svgene-type-biosynthetic-additional {
    fill: @gene-type-biosynthetic-additional;
    stroke: black;
}
.svgene-type-transport {
    fill: @gene-type-transport;
    stroke: black;
}
.svgene-type-regulatory {
    fill: @gene-type-regulatory;
    stroke: black;
}
.svgene-type-resistance {
    fill: @gene-type-resistance;
    stroke: black;
}
.svgene-tta-codon {
    fill: @feature-tta-codon;
}
.cluster-line, .centerline {
    stroke-width: 1px;
    stroke: #888;
}
.svgene-locustag {
    fill: @antismash-main;
    display: none;
    font-size: 80%;
}
.svgene-tooltip {
    .tooltip;
}

.svgene-tooltip-bold {
    font-weight: bold;
    font-size: 120%;
}

.svgene-border-cassis {
    stroke: black;
    stroke-width: 1px;
    fill: @tool-cassis;
}

.svgene-border-clusterfinder {
    stroke-width: 0px;
    fill: @tool-clusterfinder;
}

.cluster-core {
    stroke: black;
    stroke-width: 1px;
    fill: @tool-rule-based-clusters;
}

.svgene-orf, .svgene-minimap-orf{
    stroke-width: 0;
}

.svgene-selected-orf {
    stroke: #000;
    stroke-width: 1px;
}

.legend-items, .zoom-buttons {
    display: flex;
    justify-content: center;
}

.button-like {
    display: flex;
    align-items: center;
    border: 1px solid lightgrey;
    border-radius: 0.5em;
    margin-left: 1em;
    padding: 0.5em;
    padding-top: 0.3em;
    box-shadow: inset 0 -2px 2px grey;
    cursor: default;
    font-size: 80%;

    .unselectable();

    &:hover {
        background-color: #fcfcfc;
        box-shadow: inset 0 2px 5px grey;
    }

    &:active {
        background-color: #eee;
        box-shadow: inset 0 2px 5px grey;
    }
    & * {
        cursor: default;
        .unselectable();
    }
    & img {
        height: 1.5em;
        padding-right: 0.5em;
    }
}

.legend-selected {
    background-color: #eee;
    box-shadow: inset 0 2px 5px grey;
}

.legend-selector * {
    cursor: default;
}

.legend-type-other {
    background-color: @gene-type-other;
}
.legend-type-biosynthetic {
    background-color: @gene-type-biosynthetic;
}
.legend-type-biosynthetic-additional {
    background-color: @gene-type-biosynthetic-additional;
}
.legend-type-transport {
    background-color: @gene-type-transport;
}
.legend-type-regulatory {
    background-color: @gene-type-regulatory;
}
.legend-type-resistance {
    background-color: @gene-type-resistance;
}

.legend-border-cassis {
    background-color: @tool-cassis;
}

.legend-border-clusterfinder {
    background-color: @tool-clusterfinder;
}

.legend-tta-codon {
    background-color: @feature-tta-codon;
}
/* ... */

